force-app/main/default/objects/righteous__LightningAction__c/righteous__LightningAction__c.object-meta.xml
<CustomObject>
    <label>Lightning Action</label>
    <nameField>
        <label>Lightning Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lightning Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>