force-app/main/default/objects/righteous__LightningAction__c/fields/righteous__Description__c.field-meta.xml
<CustomField>
    <fullName>righteous__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>