force-app/main/default/objects/righteous__LightningAction__c/fields/righteous__Icon__c.field-meta.xml
<CustomField>
    <fullName>righteous__Icon__c</fullName>
    <description>Provide name of Icon from Salesforce Lightning Design System. e.g., action:user or custom:custom1</description>
    <inlineHelpText>Provide name of Icon from Salesforce Lightning Design System. e.g., action:user or custom:custom1</inlineHelpText>
    <label>Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>