force-app/main/default/objects/righteous__LightningAction__c/fields/righteous__Label__c.field-meta.xml
<CustomField>
    <fullName>righteous__Label__c</fullName>
    <description>Select the Text to be displayed as Action Label on UI</description>
    <inlineHelpText>Select the Text to be displayed as Action Label on UI</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>