force-app/main/default/objects/righteous__LightningAction__c/fields/righteous__Label_Type__c.field-meta.xml
<CustomField>
    <fullName>righteous__Label_Type__c</fullName>
    <description>Determines the UI Label. 
1. Value - Static Value from Label field
2. Custom Label - Reference to given Label name. Provide the API name in Label field
3. Lightning Label - Data from external object with translations. Lookup to be used.</description>
    <inlineHelpText>Determines the UI Label. 
1. Value - Static Value from Label field
2. Custom Label - Reference to given Label name. Provide the API name in Label field
3. Lightning Label - Data from external object with translations. Lookup to be used.</inlineHelpText>
    <label>Label Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Lightning Label</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>