force-app/main/default/objects/righteous__LightningAction__c/fields/righteous__LightningActionConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>righteous__LightningActionConfigurationId__c</fullName>
    <description>Associate this Lightning Action with Object&apos;s Lighting Action Configuration</description>
    <inlineHelpText>Associate this Lightning Action with Object&apos;s Lighting Action Configuration. Action will be displayed on Record Page of Object specified in Lighting Action Configuration.</inlineHelpText>
    <label>Lightning Action Configuration</label>
    <referenceTo>righteous__LightningActionConfiguration__c</referenceTo>
    <relationshipLabel>Lightning Actions</relationshipLabel>
    <relationshipName>LightningActions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>