force-app/main/default/objects/righteous__LightningAction__c/fields/righteous__LightningActionGroupId__c.field-meta.xml
<CustomField>
    <fullName>righteous__LightningActionGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associate current Action to any Lighting Action Group for logical distribution. 
Lightning Action Group&apos;s Condition validated first, and then current Action&apos;s Condition.</description>
    <inlineHelpText>Associate current Action to any Lighting Action Group for logical distribution. 
Lightning Action Group&apos;s Condition validated first, and then current Action&apos;s Condition.</inlineHelpText>
    <label>Lightning Action Group</label>
    <referenceTo>righteous__LightningActionGroup__c</referenceTo>
    <relationshipLabel>Lightning Actions</relationshipLabel>
    <relationshipName>LightningActionGroup</relationshipName>
    <type>Lookup</type>
</CustomField>