force-app/main/default/objects/righteous__LightningAction__c/fields/righteous__LightningLabel__c.field-meta.xml
<CustomField>
    <fullName>righteous__LightningLabel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Lightning Label</label>
    <referenceTo>righteous__LightningLabel__c</referenceTo>
    <relationshipLabel>Lightning Actions</relationshipLabel>
    <relationshipName>LightningActions</relationshipName>
    <type>Lookup</type>
</CustomField>