force-app/main/default/objects/righteous__LightningAction__c/fields/righteous__Sequence__c.field-meta.xml
<CustomField>
    <fullName>righteous__Sequence__c</fullName>
    <description>Specify the Display Order in which this Action should be ordered on UI.</description>
    <inlineHelpText>Specify the Display Order in which this Action should be ordered on UI.</inlineHelpText>
    <label>Sequence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>