force-app/main/default/objects/righteous__LightningAction__c/fields/righteous__Target_Type__c.field-meta.xml
<CustomField>
    <fullName>righteous__Target_Type__c</fullName>
    <description>Select the Type of Target Action. 
Select URL, to redirect user to &quot;Target URL&quot; on Action click.
Select Flow, to invoke Visual Flow on Action click.</description>
    <inlineHelpText>Select the Type of Target Action. 
Select URL, to redirect user to &quot;Target URL&quot; on Action click.
Select Flow, to invoke Visual Flow on Action click.</inlineHelpText>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>URL</fullName>
                <default>true</default>
                <label>URL</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Component</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>