force-app/main/default/objects/righteous__LightningAction__c/fields/righteous__Target_URL__c.field-meta.xml
<CustomField>
    <fullName>righteous__Target_URL__c</fullName>
    <description>Specify the Target URL on Action Link. 
In case Target Type is URL, specify URL to which user should be redirect. You can redirect to Record Page, Apex Page or any Custom URL. You can use specify URL Parameters too. 

Example: /apex/CloseWinOpportunity?type={!Type}&amp;accountName={!Account.Name}
/{AccountId}

In case Target Type is Flow, provide Visual Flow API Name.</description>
    <inlineHelpText>Specify the Target URL on Action Link. 
In case Target Type is URL, specify URL to which user should be redirect. You can redirect to Record Page, Apex Page or any Custom URL. 
In case Target Type is Flow, provide Visual Flow API Name.</inlineHelpText>
    <label>Target URL</label>
    <type>TextArea</type>
</CustomField>